# ssl-dataset

./: .gitignore  LICENSE  README.md  pyproject.toml
ssl_dataset/: __init__.py  _constants.py  _downloader.py
ssl_dataset/landmarks/: __init__.py  dataset.py
ssl_dataset/preprocessed/: __init__.py  dataset.py
ssl_dataset/skeleton/: __init__.py  dataset.py
